fix: align profile data block

--- a/src/components/Profile/ProfileInfo/ProfileInfo.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileInfo.module.css
@@ -4,7 +4,7 @@
     color: black;
     display: flex;
     flex-direction: column;
-    width: 280px;
+    width: 300px;
     min-height: 250px;
     background-color: rgb(255, 255, 255);
     border-radius: 20px;
