--- a/src/components/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
+++ b/src/components/Profile/ProfileInfo/ProfileStatus/ProfileStatus.module.css
@@ -1,7 +1,3 @@
-.profileStatus {
-  padding-top: 10px;
-}
-
 .inputChangeStatus {
   width: 70%;
 }
